Fixed distortion and different size of thumbnails

--- a/public/admin/css/mystyles.css
+++ b/public/admin/css/mystyles.css
@@ -112,7 +112,8 @@ div.row.button {
 
 .room-edit {
     width: 200px !important;
-    height: 120px !important;
+    height: auto !important;
+    max-height: 130px;
     margin-top: 10px;
 }
 
